--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="theme-color" content="#000000" />
+    <link rel="icon" type="image/png" href="src/assets/icons/protech96.png" />
+    <link rel="apple-touch-icon" type="image/png" href="src/assets/icons/protech192.png" />
+    <link rel="manifest" href="manifest.json" />
+    <title>Push App</title>
   </head>
   <body>
     <div id="root"></div>
