Ajuste do path das imagens

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" type="image/png" href="src/assets/icons/protech96.png" />
-    <link rel="apple-touch-icon" type="image/png" href="src/assets/icons/protech192.png" />
+    <link rel="icon" type="image/png" href="./public/icons/protech96.png" />
+    <link rel="apple-touch-icon" type="image/png" href="./public/icons/protech192.png" />
     <link rel="manifest" href="manifest.json" />
     <title>Push App</title>
   </head>
